modify font file path

--- a/stylesheets/font-face.css
+++ b/stylesheets/font-face.css
@@ -2,5 +2,5 @@
   font-family: 'Architects Daughter';
   font-style: normal;
   font-weight: 400;
-  src: local('Architects Daughter'), local('ArchitectsDaughter'), url(https://themes.googleusercontent.com/static/fonts/architectsdaughter/v4/RXTgOOQ9AAtaVOHxx0IUBLX-17DZ7sxHqV95SKqxd6w.woff) format('woff');
+  src: local('Architects Daughter'), local('ArchitectsDaughter'), url(font/RXTgOOQ9AAtaVOHxx0IUBLX-17DZ7sxHqV95SKqxd6w.woff) format('woff');
 }
