--- a/static/css/app.css
+++ b/static/css/app.css
@@ -268,6 +268,10 @@ footer p {
 	margin-right: 20px;
 }
 
+#ts-search-input-li {
+	margin-top: 6px;
+}
+
 /* Widescreen desktop. */
 @media (min-width: 1200px) {
   .content-nav {
