--- a/static/css/banner.css
+++ b/static/css/banner.css
@@ -7,7 +7,7 @@
     text-align: center;
     color: rgba(255, 255, 255, .6);
     text-shadow: 0 0 1px rgba(0, 0, 0, .05), 0 1px 2px rgba(0, 0, 0, .3);
-    box-shadow: 0 1px 2px rgba(0, 0, 0, .25);
+    box-shadow: 0 1px 2px rgba(0, 0, 0, .14);
 }
 
 .banner ul {
@@ -26,7 +26,7 @@
     -moz-background-size: 100% 100%;
     -webkit-background-size: 100% 100%;
     background-size: 100% 100%;
-    box-shadow: inset 0 -3px 6px rgba(0, 0, 0, .1);
+    /* box-shadow: inset 0 -3px 6px rgba(0, 0, 0, .1); */
 }
 
 .banner .inner {
