modify backtotop button style

--- a/static/css/app-theme.css
+++ b/static/css/app-theme.css
@@ -20,7 +20,7 @@ a.dl:hover {
   background-color: #6ab344;
 }
 a {
-  color: #6ab344;
+  color: #4caf50;
 }
 
 /*** Three steps left on the monochromatic scale ***/
